flux/echo/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: echo
  namespace: echo
  labels:
    app: echo
spec:
  selector:
    app: echo
  ports:
    - name: http
      port: 80
      targetPort: http
